--- a/Pages/Index.html
+++ b/Pages/Index.html
@@ -77,7 +77,7 @@
 		</section>
 		<footer>
 			<p>
-				daas.data@daas.co.uk, Copyright &copy; 2021
+				am.data@daas.co.uk, Copyright &copy; 2021
 			</p>
 		</footer>
 	</body>
